3. Bug d'affichage slider "join the shift" choisir une image fixe d'une seule personne +  augmenter la taille de l’encart

--- a/html/app/styles/core/extra-small.less
+++ b/html/app/styles/core/extra-small.less
@@ -173,13 +173,23 @@
 
 /*-- #slidervideo --*/
 #slidervideo{
-    .items .content{
-        h3{
-            margin-bottom: 10px;
-        }
-        p{
-            font-size: 16px;
-            line-height: 100%;
+    .items{
+        .row{
+            background-size: cover;
+            background-position: center center;
+            video{
+                min-height: 300px;
+                visibility: hidden;
+            }
+            .content{
+                h3{
+                    margin-bottom: 10px;
+                }
+                p{
+                    font-size: 16px;
+                    line-height: 100%;
+                }
+            }
         }
     }
 }
